--- a/app/views/comments/_list_item.html.erb
+++ b/app/views/comments/_list_item.html.erb
@@ -1,6 +1,6 @@
 <%= link_to comment, class: "list-group-item list-group-item-action d-flex align-items-center justify-content-between" do %>
   <div>
-    <%= comment.to_s %>
+    <%= comment %>
     <small class="text-muted">
       <%= time_ago_in_words(comment.updated_at) %> ago
     </small>
