--- a/app/views/friend_requests/_list_item.html.erb
+++ b/app/views/friend_requests/_list_item.html.erb
@@ -1,6 +1,6 @@
 <%= link_to friend_request, class: "list-group-item list-group-item-action d-flex align-items-center justify-content-between" do %>
   <div>
-    <%= friend_request.to_s %>
+    <%= friend_request %>
     <small class="text-muted">
       <%= time_ago_in_words(friend_request.updated_at) %> ago
     </small>
