--- a/app/views/photos/_list_item.html.erb
+++ b/app/views/photos/_list_item.html.erb
@@ -1,6 +1,6 @@
 <%= link_to photo, class: "list-group-item list-group-item-action d-flex align-items-center justify-content-between" do %>
   <div>
-    <%= photo.to_s %>
+    <%= photo %>
     <small class="text-muted">
       <%= time_ago_in_words(photo.updated_at) %> ago
     </small>
