--- a/app/views/users/_list_item.html.erb
+++ b/app/views/users/_list_item.html.erb
@@ -1,6 +1,6 @@
 <%= link_to user, class: "list-group-item list-group-item-action d-flex align-items-center justify-content-between" do %>
   <div>
-    <%= user.to_s %>
+    <%= user %>
     <small class="text-muted">
       <%= time_ago_in_words(user.updated_at) %> ago
     </small>
