--- a/app/views/users/_user_timeline.html.erb
+++ b/app/views/users/_user_timeline.html.erb
@@ -7,7 +7,7 @@
     <% @user.timeline.each do |photo| %>
       <li class="list-group-item d-flex align-items-center justify-content-between">
         <a href="/photos/<%= photo.id %>">
-          <%= photo.caption %>
+          <%= photo %>
         </a>
 
       </li>
