--- a/app/views/votes/_list_item.html.erb
+++ b/app/views/votes/_list_item.html.erb
@@ -1,6 +1,6 @@
 <%= link_to vote, class: "list-group-item list-group-item-action d-flex align-items-center justify-content-between" do %>
   <div>
-    <%= vote.to_s %>
+    <%= vote %>
     <small class="text-muted">
       <%= time_ago_in_words(vote.updated_at) %> ago
     </small>
