--- a/app/views/comments/_card.html.erb
+++ b/app/views/comments/_card.html.erb
@@ -9,10 +9,18 @@
       <dd><%= comment.body %></dd>
 
       <dt>Commenter</dt>
-      <dd><%= comment.commenter_id %></dd>
+      <dd>
+        <% if @comment.commenter.present? %>
+          <%= link_to comment.commenter, comment.commenter %>
+        <% end %>
+      </dd>
 
       <dt>Photo</dt>
-      <dd><%= comment.photo_id %></dd>
+      <dd>
+        <% if @comment.photo.present? %>
+          <%= link_to comment.photo, comment.photo %>
+        <% end %>
+      </dd>
 
     </dl>
 
